--- a/interestratev2.ipynb
+++ b/interestratev2.ipynb
@@ -6444,14 +6444,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Chi Squared = 57.324, p=0.000\nData looks non-Gaussian\n"
+      "Chi Squared = 57.324, p=0.000\nData is non-Gaussian\n"
      ]
     }
    ],
@@ -6460,21 +6460,21 @@
     "print(\"Chi Squared = %.3f, p=%.3f\" % (stat,p))\n",
     "alpha = 0.05\n",
     "if p> alpha:\n",
-    "    print('Data looks Gaussian')\n",
+    "    print('Data is Gaussian')\n",
     "else:\n",
-    "    print('Data looks non-Gaussian')"
+    "    print('Data is non-Gaussian')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Chi Squared = 27.827, p=0.000\nData looks non-Gaussian\n"
+      "Chi Squared = 27.827, p=0.000\nData is non-Gaussian\n"
      ]
     }
    ],
@@ -6483,9 +6483,9 @@
     "print(\"Chi Squared = %.3f, p=%.3f\" % (stat,p))\n",
     "alpha = 0.05\n",
     "if p> alpha:\n",
-    "    print('Data looks Gaussian')\n",
+    "    print('Data is Gaussian')\n",
     "else:\n",
-    "    print('Data looks non-Gaussian')"
+    "    print('Data is non-Gaussian')"
    ]
   },
   {
@@ -6561,7 +6561,9 @@
     "plt.title('SPClose')\n",
     "plt.subplot(1,2,2)\n",
     "stats.probplot(consolidatedData['SPClose'], plot=plt);\n",
-    "consolidatedData.SPClose.describe().T"
+    "consolidatedData.SPClose.describe().T\n",
+    "\n",
+    "##Non-Linear"
    ]
   },
   {
@@ -6607,7 +6609,9 @@
     "plt.title('InterestRate')\n",
     "plt.subplot(1,2,2)\n",
     "stats.probplot(consolidatedData['InterestRate'], plot=plt);\n",
-    "consolidatedData.SPClose.describe().T"
+    "consolidatedData.SPClose.describe().T\n",
+    "\n",
+    "##Non-Linear but closer"
    ]
   },
   {
@@ -6681,7 +6685,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#References https://towardsdatascience.com/granger-causality-and-vector-auto-regressive-model-for-time-series-forecasting-3226a64889a6"
+   ]
   }
  ]
 }
