--- a/interestratev2.ipynb
+++ b/interestratev2.ipynb
@@ -6652,12 +6652,79 @@
     "print('Augmented Dickey-Fuller Test: Interest_rate Time Series')\n",
     "helperfunctions.augmented_dickey_fuller_statistics(consolidatedData['InterestRate'])\n",
     "print('Augmented Dickey-Fuller Test: Stock_Index Time Series')\n",
-    "helperfunctions.augmented_dickey_fuller_statistics(consolidatedData['SPClose'])"
+    "helperfunctions.augmented_dickey_fuller_statistics(consolidatedData['SPClose'])\n",
+    "\n",
+    "#This p-value is high, so we fail to reject the null hypothesis. This is a non-stationary series.\n",
+    "\n",
+    "#In mathematics and statistics, a stationary process (or a strict/strictly stationary process or strong/strongly stationary process) is a stochastic process whose unconditional joint probability distribution does not change when shifted in time.[1] Consequently, parameters such as mean and variance also do not change over time. -Wikipedia"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(371, 2) (15, 2)\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "          SPClose  InterestRate\n",
+       "count  370.000000    370.000000\n",
+       "mean     7.298757     -0.002162\n",
+       "std     47.160846      0.397343\n",
+       "min   -202.240000     -2.500000\n",
+       "25%     -4.272500     -0.200000\n",
+       "50%      2.320000      0.000000\n",
+       "75%     17.212500      0.200000\n",
+       "max    203.170000      2.300000"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>SPClose</th>\n      <th>InterestRate</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>370.000000</td>\n      <td>370.000000</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>7.298757</td>\n      <td>-0.002162</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>47.160846</td>\n      <td>0.397343</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>-202.240000</td>\n      <td>-2.500000</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>-4.272500</td>\n      <td>-0.200000</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>2.320000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>17.212500</td>\n      <td>0.200000</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>203.170000</td>\n      <td>2.300000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 73
+    }
+   ],
+   "source": [
+    "#Stationary Series\n",
+    "n_obs=15\n",
+    "X_train, X_test = consolidatedData[0:-n_obs], consolidatedData[-n_obs:]\n",
+    "print(X_train.shape, X_test.shape)\n",
+    "\n",
+    "transformed_data=X_train.diff().dropna()\n",
+    "transformed_data.describe()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Augmented Dickey-Fuller Test: Interest_rate Time Series\nADF Statistic: -8.058037\np-value: 0.000000\nCritical Values:\n\t1%: -3.448\n\t5%: -2.870\n\t10%: -2.571\nAugmented Dickey-Fuller Test: Stock_Index Time Series\nADF Statistic: -5.489723\np-value: 0.000002\nCritical Values:\n\t1%: -3.449\n\t5%: -2.870\n\t10%: -2.571\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Augmented Dickey-Fuller Test: Interest_rate Time Series')\n",
+    "helperfunctions.augmented_dickey_fuller_statistics(transformed_data['InterestRate'])\n",
+    "print('Augmented Dickey-Fuller Test: Stock_Index Time Series')\n",
+    "helperfunctions.augmented_dickey_fuller_statistics(transformed_data['SPClose'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -6665,19 +6732,19 @@
      "data": {
       "text/plain": [
        "                SPClose_x  InterestRate_x\n",
-       "SPClose_y          1.0000          0.3873\n",
-       "InterestRate_y     0.0171          1.0000"
+       "SPClose_y          1.0000          0.4809\n",
+       "InterestRate_y     0.1704          1.0000"
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>SPClose_x</th>\n      <th>InterestRate_x</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>SPClose_y</th>\n      <td>1.0000</td>\n      <td>0.3873</td>\n    </tr>\n    <tr>\n      <th>InterestRate_y</th>\n      <td>0.0171</td>\n      <td>1.0000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>SPClose_x</th>\n      <th>InterestRate_x</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>SPClose_y</th>\n      <td>1.0000</td>\n      <td>0.4809</td>\n    </tr>\n    <tr>\n      <th>InterestRate_y</th>\n      <td>0.1704</td>\n      <td>1.0000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 24
+     "execution_count": 75
     }
    ],
    "source": [
-    "helperfunctions.grangers_causality_matrix(consolidatedData, variables = consolidatedData.columns)  \n",
+    "helperfunctions.grangers_causality_matrix(transformed_data, variables = transformed_data.columns)  \n",
     "\n",
-    "#If we take the value .27 in (row 1, column 12, it refers to the p-value of the Granger’s Causality test for InterestRate_x causing SPClose_y. "
+    "#If we take the value .48 in (row 1, column 12, it refers to the p-value of the Granger’s Causality test for InterestRate_x causing SPClose_y. "
    ]
   },
   {
