--- a/interestratev2.ipynb
+++ b/interestratev2.ipynb
@@ -6744,7 +6744,8 @@
    "source": [
     "helperfunctions.grangers_causality_matrix(transformed_data, variables = transformed_data.columns)  \n",
     "\n",
-    "#If we take the value .48 in (row 1, column 12, it refers to the p-value of the Granger’s Causality test for InterestRate_x causing SPClose_y. "
+    "#If we take the value .48 in (row 1, column 12, it refers to the p-value of the Granger’s Causality test for InterestRate_x causing SPClose_y. \n",
+    "#The implication is that both the Close and the Interest Rate Impact each other but interest rate is more impactful."
    ]
   },
   {
